# ml-mnist

./: .gitignore  README.md  main.py  mise.toml  pyproject.toml  resnet.py
